# weatherstat

./: .gitignore  CLAUDE.md  Justfile  README.md  plan-1.md  weatherstat.yaml  weatherstat.yaml.example
.claude/: settings.local.json
.claude/commands/: debug.md
archive/ml/: backtest_overnight.py  (+4 more)
docs/: ARCHITECTURE.md  BANDITS.md  EXPERIMENTS.md  FUTURE.md  PLAN-2.md  PLAN.md  debugging-notes.md  modeling-strategy.md  mrt-correction.md  onboarding.md  operations.md  overview.md
ha-client/: .env.example  package.json  pnpm-lock.yaml  tsconfig.json
ml/: pyproject.toml
ml/data/metrics/: backtest_overnight_cooling.json
ml/scripts/: fit_tau.py
ml/src/weatherstat/: _data_dir.py  advisory.py  collector.py  config.py  control.py  decision_log.py  evaluate.py  experiment.py  extract.py  features.py  forecast.py  inference.py  safety.py  simulator.py  sysid.py  train.py  types.py  visualize.py  weather.py  yaml_config.py
ml/src/weatherstat/tui/: __main__.py  widgets.py
ml/tests/: conftest.py  test_advisory.py  test_control.py  test_features.py  test_generics.py  test_safety.py  test_simulator.py
ml/tests/fixtures/: overnight_cooling_20260214.parquet
scripts/: backfill-outdoor-temp.py  check-health.sh  debug_state.py  discover.py  experiment_sysid.py  migrate-to-eav.py  plot_comfort.py  replay_opportunity.py  run-collector.sh  run-retrain.sh  snapshot_bundle.py  worktree.sh
tests/: conftest.py  test_advisory.py  test_control.py  test_forecast.py  test_generics.py  test_safety.py  test_simulator.py  test_tui_controller.py  test_validate.py  test_web.py
(+49 files in other folders)
