[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weatherstat"
version = "0.1.0"
description = "LightGBM training/inference pipeline for smart thermostat control"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.5",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "astral>=3.2",
    "numpy>=2.0",
    "requests>=2.32",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/weatherstat"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
